--- a/goSellSDK/Core/UI/Internal/Resources/AsyncPaymentResultView.xib
+++ b/goSellSDK/Core/UI/Internal/Resources/AsyncPaymentResultView.xib
@@ -7,29 +7,104 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AsyncPaymentResultView" customModule="goSellSDK"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AsyncPaymentResultView" customModule="goSellSDK">
+            <connections>
+                <outlet property="closeButton" destination="bvF-S5-D2a" id="L6j-EP-1bs"/>
+                <outlet property="codeExpirationLabel" destination="dzU-2m-dIm" id="cCk-1h-MW9"/>
+                <outlet property="codeReferenceLabel" destination="uB8-9d-EUZ" id="7b3-QL-siQ"/>
+                <outlet property="hintFooterLabel" destination="h1R-nz-IXw" id="lMm-Nf-AiO"/>
+                <outlet property="orderCodeTitleLabel" destination="mNt-7C-bjZ" id="QOK-59-Kp7"/>
+                <outlet property="paymentStatusLabel" destination="CCa-ZL-AVH" id="Cnt-3n-P90"/>
+                <outlet property="smsAcknolwedgeLabel" destination="U2D-0V-VGx" id="bfS-X0-ntE"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="416"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The payment is in Progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCa-ZL-AVH">
-                    <rect key="frame" x="103.5" y="15" width="207.5" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment in Progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCa-ZL-AVH">
+                    <rect key="frame" x="128.5" y="15" width="157.5" height="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.32549019607843138" green="0.32549019607843138" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LxB-Wk-m5Y">
-                    <rect key="frame" x="138" y="366" width="138" height="30"/>
-                    <state key="normal" title="We are almost there"/>
-                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2D-0V-VGx">
+                    <rect key="frame" x="89.5" y="60" width="235.5" height="59.5"/>
+                    <string key="text">An sms has been sent to
+90064541
+with your Fawry Pay Reference</string>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dzU-2m-dIm">
+                    <rect key="frame" x="115.5" y="230.5" width="183.5" height="40"/>
+                    <string key="text">Code expires on
+13/13/2020 @ 13:13 PM</string>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNt-7C-bjZ">
+                    <rect key="frame" x="162.5" y="144.5" width="89.5" height="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0294383243" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uB8-9d-EUZ">
+                    <rect key="frame" x="109.5" y="164.5" width="195" height="41"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="35"/>
+                    <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1R-nz-IXw">
+                    <rect key="frame" x="8" y="295.5" width="398" height="59.5"/>
+                    <string key="text">Please visit a Fawry Cash Location using the link below to complete your payment
+http://google.com</string>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yns-QB-pEH">
+                    <rect key="frame" x="0.0" y="324" width="414" height="60"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvF-S5-D2a" customClass="TapButton" customModule="goSellSDK">
+                            <rect key="frame" x="8" y="8" width="398" height="44"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="0GY-KW-OCP"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="bvF-S5-D2a" firstAttribute="top" secondItem="yns-QB-pEH" secondAttribute="top" constant="8" id="8dz-g7-ulj"/>
+                        <constraint firstAttribute="height" constant="60" id="F0s-ku-6qx"/>
+                        <constraint firstItem="bvF-S5-D2a" firstAttribute="leading" secondItem="yns-QB-pEH" secondAttribute="leading" constant="8" id="TcL-6x-3Nf"/>
+                        <constraint firstAttribute="trailing" secondItem="bvF-S5-D2a" secondAttribute="trailing" constant="8" id="wap-mD-alB"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="CCa-ZL-AVH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="2tz-Th-UkZ"/>
+                <constraint firstItem="dzU-2m-dIm" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="5ux-nY-JFQ"/>
+                <constraint firstItem="mNt-7C-bjZ" firstAttribute="top" secondItem="U2D-0V-VGx" secondAttribute="bottom" constant="25" id="B5U-FZ-uhH"/>
+                <constraint firstAttribute="trailing" secondItem="h1R-nz-IXw" secondAttribute="trailing" constant="8" id="JCB-Bb-iL3"/>
+                <constraint firstItem="mNt-7C-bjZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="LpU-Ot-z5H"/>
+                <constraint firstItem="h1R-nz-IXw" firstAttribute="top" secondItem="dzU-2m-dIm" secondAttribute="bottom" constant="25" id="M4H-yI-bXo"/>
+                <constraint firstItem="dzU-2m-dIm" firstAttribute="top" secondItem="uB8-9d-EUZ" secondAttribute="bottom" constant="25" id="ODp-eG-JBp"/>
                 <constraint firstItem="CCa-ZL-AVH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="Ruq-9f-gFg"/>
-                <constraint firstAttribute="bottom" secondItem="LxB-Wk-m5Y" secondAttribute="bottom" constant="20" id="bML-kI-gYW"/>
-                <constraint firstItem="LxB-Wk-m5Y" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dCm-8V-yfQ"/>
+                <constraint firstItem="h1R-nz-IXw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Tzg-OX-uT4"/>
+                <constraint firstItem="h1R-nz-IXw" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UdI-iH-rtD"/>
+                <constraint firstItem="uB8-9d-EUZ" firstAttribute="top" secondItem="mNt-7C-bjZ" secondAttribute="bottom" id="Uro-Nv-b9c"/>
+                <constraint firstItem="yns-QB-pEH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Vfh-v6-x33"/>
+                <constraint firstItem="uB8-9d-EUZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="esV-ns-5WP"/>
+                <constraint firstAttribute="trailing" secondItem="yns-QB-pEH" secondAttribute="trailing" id="ixK-Nh-j9Q"/>
+                <constraint firstItem="U2D-0V-VGx" firstAttribute="top" secondItem="CCa-ZL-AVH" secondAttribute="bottom" constant="25" id="lgr-KX-k3j"/>
+                <constraint firstItem="U2D-0V-VGx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tiQ-jO-f0y"/>
+                <constraint firstAttribute="bottom" secondItem="yns-QB-pEH" secondAttribute="bottom" constant="32" id="wA7-pC-hWi"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="-8.0357142857142847"/>
