--- a/goSellSDK/Core/UI/Internal/Resources/AsyncPaymentResultView.xib
+++ b/goSellSDK/Core/UI/Internal/Resources/AsyncPaymentResultView.xib
@@ -9,13 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AsyncPaymentResultView" customModule="goSellSDK">
             <connections>
+                <outlet property="acknolwedgementLabel" destination="U2D-0V-VGx" id="p57-df-l3f"/>
                 <outlet property="closeButton" destination="bvF-S5-D2a" id="L6j-EP-1bs"/>
                 <outlet property="codeExpirationLabel" destination="dzU-2m-dIm" id="cCk-1h-MW9"/>
                 <outlet property="codeReferenceLabel" destination="uB8-9d-EUZ" id="7b3-QL-siQ"/>
                 <outlet property="hintFooterLabel" destination="h1R-nz-IXw" id="lMm-Nf-AiO"/>
                 <outlet property="orderCodeTitleLabel" destination="mNt-7C-bjZ" id="QOK-59-Kp7"/>
                 <outlet property="paymentStatusLabel" destination="CCa-ZL-AVH" id="Cnt-3n-P90"/>
-                <outlet property="smsAcknolwedgeLabel" destination="U2D-0V-VGx" id="bfS-X0-ntE"/>
+                <outlet property="storeLinkLabel" destination="aJF-cs-r0f" id="9Hr-pu-3RK"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -58,16 +59,14 @@ with your Fawry Pay Reference</string>
                     <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1R-nz-IXw">
-                    <rect key="frame" x="8" y="295.5" width="398" height="59.5"/>
-                    <string key="text">Please visit a Fawry Cash Location using the link below to complete your payment
-http://google.com</string>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please visit a Fawry Cash Location using the link below to complete your payment" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1R-nz-IXw">
+                    <rect key="frame" x="8" y="295.5" width="398" height="40"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yns-QB-pEH">
-                    <rect key="frame" x="0.0" y="324" width="414" height="60"/>
+                <view contentMode="scaleToFill" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yns-QB-pEH">
+                    <rect key="frame" x="0.0" y="384" width="414" height="6"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvF-S5-D2a" customClass="TapButton" customModule="goSellSDK">
                             <rect key="frame" x="8" y="8" width="398" height="44"/>
@@ -85,6 +84,12 @@ http://google.com</string>
                         <constraint firstAttribute="trailing" secondItem="bvF-S5-D2a" secondAttribute="trailing" constant="8" id="wap-mD-alB"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Http://google.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJF-cs-r0f">
+                    <rect key="frame" x="8" y="335.5" width="398" height="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
@@ -97,12 +102,15 @@ http://google.com</string>
                 <constraint firstItem="dzU-2m-dIm" firstAttribute="top" secondItem="uB8-9d-EUZ" secondAttribute="bottom" constant="25" id="ODp-eG-JBp"/>
                 <constraint firstItem="CCa-ZL-AVH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="Ruq-9f-gFg"/>
                 <constraint firstItem="h1R-nz-IXw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Tzg-OX-uT4"/>
+                <constraint firstItem="aJF-cs-r0f" firstAttribute="top" secondItem="h1R-nz-IXw" secondAttribute="bottom" id="US0-Cn-kwF"/>
                 <constraint firstItem="h1R-nz-IXw" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UdI-iH-rtD"/>
                 <constraint firstItem="uB8-9d-EUZ" firstAttribute="top" secondItem="mNt-7C-bjZ" secondAttribute="bottom" id="Uro-Nv-b9c"/>
                 <constraint firstItem="yns-QB-pEH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Vfh-v6-x33"/>
                 <constraint firstItem="uB8-9d-EUZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="esV-ns-5WP"/>
                 <constraint firstAttribute="trailing" secondItem="yns-QB-pEH" secondAttribute="trailing" id="ixK-Nh-j9Q"/>
                 <constraint firstItem="U2D-0V-VGx" firstAttribute="top" secondItem="CCa-ZL-AVH" secondAttribute="bottom" constant="25" id="lgr-KX-k3j"/>
+                <constraint firstAttribute="trailing" secondItem="aJF-cs-r0f" secondAttribute="trailing" constant="8" id="nG1-MR-xHO"/>
+                <constraint firstItem="aJF-cs-r0f" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="r4z-fN-QhX"/>
                 <constraint firstItem="U2D-0V-VGx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tiQ-jO-f0y"/>
                 <constraint firstAttribute="bottom" secondItem="yns-QB-pEH" secondAttribute="bottom" constant="32" id="wA7-pC-hWi"/>
             </constraints>
